# DualAxis

./: .gitignore  README.md  main.py  pyproject.toml
archivos/: __init__.py  archivos_recientes.py
datos/: archivos_recientes.txt
graficos/: graficos_barras.py  graficos_dispersion.py  graficos_doble_entrada.py  tablas_contigencia.py
gui/: __init__.py  columns_dialog.py  dialog_general.py  dialog_nombre_columna.py  dos_var_dialog.py  menu_opciones.py  menu_principal.py  menubar.py  tabla.py  table_model.py  un_var_dialog.py
modelos/: __init__.py  anare.py  medidas_resumen.py  regresion_lineal.py  tabla_de_datos.py  tablas_frecuencias.py
test/leer_csv/: la_pta_que_los_pario.csv  pokemon_data.xlsx  pokemon_data2.csv  test.csv
