[project]
name = "dual-axis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyside6>=6.10.0",
    "pyxlsb>=1.0.10",
    "scipy>=1.16.3",
    "xlrd>=2.0.2",
]
